# ProjectNuke-KeplerStudio

./: .gitignore  KeplerStudio.bundle  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: README.md
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp  native_bridge_alias.cpp  native_crop_transform.cpp  native_flare_guard.cpp  native_flare_mask.cpp  native_selection_blend.cpp  native_special_effects.cpp
app/src/main/kotlin/com/projectnuke/keplerstudio/: MainActivity.kt
app/src/main/kotlin/com/projectnuke/keplerstudio/bridge/: NativePhotoCore.kt
app/src/main/kotlin/com/projectnuke/keplerstudio/editor/: AutoRouterV0.kt  AutoStraightenV0.kt  BitmapMemoryBudget.kt  CropBitmapTransform.kt  CropState.kt  DebugMemoryTracker.kt  DraftGeneration.kt  DraftGenerationStorage.kt  EditParams.kt  EditorHistoryStorage.kt  EditorUiState.kt  EditorViewModel.kt  ExportModels.kt  FlareGuardBridgeV0.kt  FlareGuardModelRunner.kt  FlareGuardV0.kt  MemoryTrackerScope.kt  NeuralPresetExtractor.kt  PresetColorLook.kt  PresetColorLookCodec.kt  PresetExtractionModels.kt  PresetLookHandoff.kt  ProcessingEngines.kt  SelectionModels.kt  ViewportState.kt  (+3 more)
app/src/main/res/values/: styles.xml
docs/: PHASE_3A_REPORT.md  ai_pipeline_next_steps.md  auto_router_dataset_schema.md  codex_editor_v2_classic_ui_patch.md  flare_guard_ai_integration.md  flare_guard_v0_plan.md  remaster_ai_model_plan.md  universal_balancer_dataset_schema.md
tools/flare_guard_student/: .gitignore  README.md  requirements.txt  train_mask_student.py
(+26 files in other folders)
